--- a/main.css
+++ b/main.css
@@ -47,8 +47,26 @@ input[type=button]:hover{
     margin-left: 100px;
 }
 
+#table,
+#right{
+    width: 600px;
+}
+
 th, 
 td{
-    width: 150px;
-    height: 50px;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    background-color: aqua;
+}
+
+#tableBody{
+    margin-left: 50px;
+    width: 50px;
+    border: 1px solid black;
+}
+
+.tr{
+    width: 600px;
+    margin-left: 50px;
 }
